--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>DevClub - Instagram</title>
 </head>
 <body>
-    <input placeholder="Telefone, nome de usuário ou email">
-    <input placeholder="Senha">
-    <button>Entrar</button>
 
-    <a>Esqueceu a senha ?</a>
-    <p>Não tem uma conta ? Cadastre-se</p>
+    <div class="caixa-imagens">
+        <img src="img/celular.png" alt="Tela Celular" class="imagem-celular">
+    </div>
+
+    <div class="caixa-form">
+        <img src="img/insta-logo.png" alt="Logo Instagram" class="insta-logo">
+
+        <input placeholder="Telefone, nome de usuário ou email">
+        <input placeholder="Senha" type="password">
+
+        <button>Entrar</button>
+
+        <a class="login-facebook">Entrar com facebook</a>
+
+        <a class="esqueceu-senha">Esqueceu a senha ?</a>
+    </div>
+
+    
 </body>
 </html>
