(Aula 3 - DevClub) - Experiência na prática em programação

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>DevClub - Instagram</title>
+    <link rel="shortcut icon" href="img/icone-instagram.png" type="image/x-icon">
+
+    <title>Instagram</title>
 </head>
 <body>
 
     <div class="caixa-imagens">
         <img src="img/celular.png" alt="Tela Celular" class="imagem-celular">
+        <img src="img/insta1.png" class="imagem-insta">
+        <img src="img/insta2.png" class="imagem-insta troca-imagem">
     </div>
 
     <div class="caixa-form">
@@ -27,4 +31,5 @@
 
     
 </body>
+<script src="scripts.js"></script>
 </html>
